début dev html uniquement

--- a/index.html
+++ b/index.html
@@ -22,10 +22,195 @@
 
   <body>
     <div class="main-container">
-      <header></header>
+      <header>
+        <img src="./images/logo/Booki.png" alt="Logo du site Booki" />
+        <nav>
+          <a href="">Hébergements</a>
+          <a href="">Activités</a>
+        </nav>
+      </header>
       <main>
+        <div class="zone-de-recherche">
+          <div class="headline">
+            <h2>Trouvez votre hébergement pour des vacances de rêve</h2>
+            <p>En plein centre-ville ou en pleine nature</p>
+          </div>
+          <div class="barre-de-recherche"></div>
+          <div class="filtres"></div>
+          <div class="note-info"></div>
+        </div>
         <div class="hebergements-and-populaires">
-          <section class="hebergements"></section>
+          <section class="hebergements">
+            <div class="hebergement-title">
+              <h2 class="section-title">Hèbergements à Marseille</h2>
+            </div>
+            <div class="column-hebergement">
+              <div class="cartes-hebergement">
+                <div class="cartes-hebergement-content1">
+                  <img
+                    src="./images/hebergements/fred-kleber.jpg"
+                    alt="photo d'une chambre de l'hôtel du port"
+                  />
+                </div>
+                <div class="cartes-hebergement-content2">
+                  <div class="nom-hotel">
+                    <h3>Hôtel du port</h3>
+                  </div>
+                  <div class="prix">
+                    <p>Nuit à partir de 52€</p>
+                  </div>
+                  <div class="card-rating">
+                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                    <i
+                      class="fa-xs fa-solid fa-star neutral-star"
+                      aria-hidden="true"
+                    >
+                    </i>
+                  </div>
+                </div>
+              </div>
+              <div class="cartes-hebergement">
+                <div class="cartes-hebergement-content1">
+                  <img
+                    src="./images/hebergements/febrian-zakaria.jpg"
+                    alt="photo d'une chambre de l'hôtel Chez Amina"
+                  />
+                </div>
+                <div class="cartes-hebergement-content2">
+                  <div class="nom-hotel">
+                    <h3>Hôtel Chez Amina</h3>
+                  </div>
+                  <div class="prix">
+                    <p>Nuit à partir de 96€</p>
+                  </div>
+                  <div class="card-rating">
+                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                    <i
+                      class="fa-xs fa-solid fa-star neutral-star"
+                      aria-hidden="true"
+                    >
+                    </i>
+                  </div>
+                </div>
+              </div>
+              <div class="cartes-hebergement">
+                <div class="cartes-hebergement-content1">
+                  <img
+                    src="./images/hebergements/reisetopia.jpg"
+                    alt="photo d'une chambre de l'hôtel Les Mouettes"
+                  />
+                </div>
+                <div class="cartes-hebergement-content2">
+                  <div class="nom-hotel">
+                    <h3>Hôtel Les Mouettes</h3>
+                  </div>
+                  <div class="prix">
+                    <p>Nuit à partir de 76€</p>
+                  </div>
+                  <div class="card-rating">
+                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                    <i
+                      class="fa-xs fa-solid fa-star neutral-star"
+                      aria-hidden="true"
+                    >
+                    </i>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="column-hebergement">
+              <div class="cartes-hebergement">
+                <div class="cartes-hebergement-content1">
+                  <img
+                    src="./images/hebergements/annie-spratt.jpg"
+                    alt="photo d'une chambre de l'hôtel de la Mer"
+                  />
+                </div>
+                <div class="cartes-hebergement-content2">
+                  <div class="nom-hotel">
+                    <h3>Hôtel de la Mer</h3>
+                  </div>
+                  <div class="prix">
+                    <p>Nuit à partir de 46€</p>
+                  </div>
+                  <div class="card-rating">
+                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                    <i
+                      class="fa-xs fa-solid fa-star neutral-star"
+                      aria-hidden="true"
+                    >
+                    </i>
+                  </div>
+                </div>
+              </div>
+              <div class="cartes-hebergement">
+                <div class="cartes-hebergement-content1">
+                  <img
+                    src="./images/hebergements/marcus-loke.jpg"
+                    alt="photo d'une chambre de l'Auberge La Canebière"
+                  />
+                </div>
+                <div class="cartes-hebergement-content2">
+                  <div class="nom-hotel">
+                    <h3>Auberge La Canebière</h3>
+                  </div>
+                  <div class="prix">
+                    <p>Nuit à partir de 25€</p>
+                  </div>
+                  <div class="card-rating">
+                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                    <i
+                      class="fa-xs fa-solid fa-star neutral-star"
+                      aria-hidden="true"
+                    >
+                    </i>
+                  </div>
+                </div>
+              </div>
+              <div class="cartes-hebergement">
+                <div class="cartes-hebergement-content1">
+                  <img
+                    src="./images/hebergements/nicate-lee.jpg"
+                    alt="photo d'une chambre de l'Auberge Le Panier"
+                  />
+                </div>
+                <div class="cartes-hebergement-content2">
+                  <div class="nom-hotel">
+                    <h3>Auberge Le Panier</h3>
+                  </div>
+                  <div class="prix">
+                    <p>Nuit à partir de 23€</p>
+                  </div>
+                  <div class="card-rating">
+                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                    <i
+                      class="fa-xs fa-solid fa-star neutral-star"
+                      aria-hidden="true"
+                    >
+                    </i>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
           <section class="populaires">
             <div class="populaires-title">
               <h2 class="section-title">Les plus populaires</h2>
@@ -112,8 +297,64 @@
             </div>
           </section>
         </div>
+        <div class="onglet-activite">
+          <div class="activite-title">
+            <h2 class="section-title">Activités à Marseille</h2>
+          </div>
+          <div class="activite">
+            <div class="cartes-activite">
+                <div class="cartes-activite-content1">
+                    <img src="./images/activites/reno-laithienne.jpg" alt="Photo du vieux port de marseille"/>
+                </div>
+                <div class="cartes-activite-content2">
+                    <h3>Vieux-Port</h3>
+                </div>
+            </div>
+            <div class="cartes-activite">
+                <div class="cartes-activite-content1">
+                    <img src="./images/activites/paul-hermann.jpg" alt="Photo du fort de Pomègues"/>
+                </div>
+                <div class="cartes-activite-content2">
+                    <h3>Fort de Pomègues</h3>
+                </div>
+            </div>
+            <div class="cartes-activite">
+                <div class="cartes-activite-content1">
+                    <img src="./images/activites/kilyan-sockalingum.jpg" alt="Photo du Parc national des calanques"/>
+                </div>
+                <div class="cartes-activite-content2">
+                    <h3>Parc national des calanques</h3>
+                </div>
+            </div>
+            <div class="cartes-activite">
+                <div class="cartes-activite-content1">
+                    <img src="./images/activites/florian-wehde.jpg" alt="Photo de Notre-Dame-de-la-Garde"/>
+                </div>
+                <div class="cartes-activite-content2">
+                    <h3>Notre-Dame-de-la-Garde</h3>
+                </div>
+            </div>
+          </div>
+        </div>
       </main>
-      <footer></footer>
+      <footer>
+        <div class="footer-content">
+            <h2 class="footer-title">A propos</h2>
+            <p>Fonctionnement du site</p>
+            <p>Conditions générales</p>
+            <p>Données et confidentialité</p>
+        </div>
+        <div class="footer-content">
+            <h2 class="footer-title">Nos hébergements</h2>
+            <p>Charte qualité</p>
+            <p>Proposer votre hôtel</p>
+        </div>
+        <div class="footer-content">
+            <h2 class="footer-title">Assistance</h2>
+            <p>Centre d'aide</p>
+            <p>Nous contacter</p>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
