--- a/index.html
+++ b/index.html
@@ -303,56 +303,68 @@
           </div>
           <div class="activite">
             <div class="cartes-activite">
-                <div class="cartes-activite-content1">
-                    <img src="./images/activites/reno-laithienne.jpg" alt="Photo du vieux port de marseille"/>
-                </div>
-                <div class="cartes-activite-content2">
-                    <h3>Vieux-Port</h3>
-                </div>
+              <div class="cartes-activite-content1">
+                <img
+                  src="./images/activites/reno-laithienne.jpg"
+                  alt="Photo du vieux port de marseille"
+                />
+              </div>
+              <div class="cartes-activite-content2">
+                <h3>Vieux-Port</h3>
+              </div>
             </div>
             <div class="cartes-activite">
-                <div class="cartes-activite-content1">
-                    <img src="./images/activites/paul-hermann.jpg" alt="Photo du fort de Pomègues"/>
-                </div>
-                <div class="cartes-activite-content2">
-                    <h3>Fort de Pomègues</h3>
-                </div>
+              <div class="cartes-activite-content1">
+                <img
+                  src="./images/activites/paul-hermann.jpg"
+                  alt="Photo du fort de Pomègues"
+                />
+              </div>
+              <div class="cartes-activite-content2">
+                <h3>Fort de Pomègues</h3>
+              </div>
             </div>
             <div class="cartes-activite">
-                <div class="cartes-activite-content1">
-                    <img src="./images/activites/kilyan-sockalingum.jpg" alt="Photo du Parc national des calanques"/>
-                </div>
-                <div class="cartes-activite-content2">
-                    <h3>Parc national des calanques</h3>
-                </div>
+              <div class="cartes-activite-content1">
+                <img
+                  src="./images/activites/kilyan-sockalingum.jpg"
+                  alt="Photo du Parc national des calanques"
+                />
+              </div>
+              <div class="cartes-activite-content2">
+                <h3>Parc national des calanques</h3>
+              </div>
             </div>
             <div class="cartes-activite">
-                <div class="cartes-activite-content1">
-                    <img src="./images/activites/florian-wehde.jpg" alt="Photo de Notre-Dame-de-la-Garde"/>
-                </div>
-                <div class="cartes-activite-content2">
-                    <h3>Notre-Dame-de-la-Garde</h3>
-                </div>
+              <div class="cartes-activite-content1">
+                <img
+                  src="./images/activites/florian-wehde.jpg"
+                  alt="Photo de Notre-Dame-de-la-Garde"
+                />
+              </div>
+              <div class="cartes-activite-content2">
+                <h3>Notre-Dame-de-la-Garde</h3>
+              </div>
             </div>
           </div>
         </div>
       </main>
       <footer>
         <div class="footer-content">
-            <h2 class="footer-title">A propos</h2>
-            <p>Fonctionnement du site</p>
-            <p>Conditions générales</p>
-            <p>Données et confidentialité</p>
+          <h2 class="footer-title">A propos</h2>
+          <p>Fonctionnement du site</p>
+          <p>Conditions générales</p>
+          <p>Données et confidentialité</p>
         </div>
         <div class="footer-content">
-            <h2 class="footer-title">Nos hébergements</h2>
-            <p>Charte qualité</p>
-            <p>Proposer votre hôtel</p>
+          <h2 class="footer-title">Nos hébergements</h2>
+          <p>Charte qualité</p>
+          <p>Proposer votre hôtel</p>
         </div>
         <div class="footer-content">
-            <h2 class="footer-title">Assistance</h2>
-            <p>Centre d'aide</p>
-            <p>Nous contacter</p>
+          <h2 class="footer-title">Assistance</h2>
+          <p>Centre d'aide</p>
+          <p>Nous contacter</p>
         </div>
       </footer>
     </div>
