ajout de commentaires sur code html

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
   <body>
     <div class="main-container">
+<!--Header-->
       <header>
         <img src="./images/logo/Booki.png" alt="Logo du site Booki" />
         <nav>
@@ -30,6 +31,7 @@
         </nav>
       </header>
       <main>
+<!--Encadré zone de présentation et recherche-->
         <div class="zone-de-recherche">
           <div class="headline">
             <h2>Trouvez votre hébergement pour des vacances de rêve</h2>
@@ -40,6 +42,7 @@
           <div class="note-info"></div>
         </div>
         <div class="hebergements-and-populaires">
+<!--Encadré zone Hébergement-->
           <section class="hebergements">
             <div class="hebergement-title">
               <h2 class="section-title">Hèbergements à Marseille</h2>
@@ -211,6 +214,7 @@
               </div>
             </div>
           </section>
+<!--Encadré zone Populaires-->
           <section class="populaires">
             <div class="populaires-title">
               <h2 class="section-title">Les plus populaires</h2>
@@ -297,7 +301,8 @@
             </div>
           </section>
         </div>
-        <div class="onglet-activite">
+<!--Encadré zone Activité-->
+        <section class="onglet-activite">
           <div class="activite-title">
             <h2 class="section-title">Activités à Marseille</h2>
           </div>
@@ -347,8 +352,9 @@
               </div>
             </div>
           </div>
-        </div>
+        </section>
       </main>
+<!--Footer-->
       <footer>
         <div class="footer-content">
           <h2 class="footer-title">A propos</h2>
