finition code css+html du footer

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <div class="main-container">
 <!--Header-->
       <header>
-        <img src="./images/logo/Booki.png" alt="Logo du site Booki" />
+        <img src="./images/logo/Booki.png" alt="Logo du site Booki" id="logo" />
         <nav>
-          <a href="">Hébergements</a>
-          <a href="">Activités</a>
+          <a href="#lien-hebergement">Hébergements</a>
+          <a href="#lien-activite">Activités</a>
         </nav>
       </header>
       <main>
@@ -45,10 +45,10 @@
 <!--Encadré zone Hébergement-->
           <section class="hebergements">
             <div class="hebergement-title">
-              <h2 class="section-title">Hèbergements à Marseille</h2>
+              <h2 class="section-title" id="lien-hebergement">Hèbergements à Marseille</h2>
             </div>
             <div class="column-hebergement">
-              <div class="cartes-hebergement">
+              <article class="cartes-hebergement">
                 <div class="cartes-hebergement-content1">
                   <img
                     src="./images/hebergements/fred-kleber.jpg"
@@ -74,8 +74,8 @@
                     </i>
                   </div>
                 </div>
-              </div>
-              <div class="cartes-hebergement">
+            </article>
+              <article class="cartes-hebergement">               
                 <div class="cartes-hebergement-content1">
                   <img
                     src="./images/hebergements/febrian-zakaria.jpg"
@@ -101,8 +101,8 @@
                     </i>
                   </div>
                 </div>
-              </div>
-              <div class="cartes-hebergement">
+            </article>
+              <article class="cartes-hebergement">
                 <div class="cartes-hebergement-content1">
                   <img
                     src="./images/hebergements/reisetopia.jpg"
@@ -128,10 +128,10 @@
                     </i>
                   </div>
                 </div>
-              </div>
+            </article>
             </div>
             <div class="column-hebergement">
-              <div class="cartes-hebergement">
+              <article class="cartes-hebergement">
                 <div class="cartes-hebergement-content1">
                   <img
                     src="./images/hebergements/annie-spratt.jpg"
@@ -157,8 +157,8 @@
                     </i>
                   </div>
                 </div>
-              </div>
-              <div class="cartes-hebergement">
+            </article>
+              <article class="cartes-hebergement">
                 <div class="cartes-hebergement-content1">
                   <img
                     src="./images/hebergements/marcus-loke.jpg"
@@ -184,8 +184,8 @@
                     </i>
                   </div>
                 </div>
-              </div>
-              <div class="cartes-hebergement">
+            </article>
+              <article class="cartes-hebergement">   
                 <div class="cartes-hebergement-content1">
                   <img
                     src="./images/hebergements/nicate-lee.jpg"
@@ -211,7 +211,7 @@
                     </i>
                   </div>
                 </div>
-              </div>
+            </article>          
             </div>
           </section>
 <!--Encadré zone Populaires-->
@@ -304,7 +304,7 @@
 <!--Encadré zone Activité-->
         <section class="onglet-activite">
           <div class="activite-title">
-            <h2 class="section-title">Activités à Marseille</h2>
+            <h2 class="section-title" id="lien-activite">Activités à Marseille</h2>
           </div>
           <div class="activite">
             <div class="cartes-activite">
@@ -357,20 +357,20 @@
 <!--Footer-->
       <footer>
         <div class="footer-content">
-          <h2 class="footer-title">A propos</h2>
-          <p>Fonctionnement du site</p>
-          <p>Conditions générales</p>
-          <p>Données et confidentialité</p>
+          <h3>A propos</h3>
+          <a href="#">Fonctionnement du site</a>
+          <a href="#">Conditions générales</a>
+          <a href="#">Données et confidentialité</a>
         </div>
         <div class="footer-content">
-          <h2 class="footer-title">Nos hébergements</h2>
-          <p>Charte qualité</p>
-          <p>Proposer votre hôtel</p>
+          <h3>Nos hébergements</h3>
+          <a href="#">Charte qualité</a>
+          <a href="#">Proposer votre hôtel</a>
         </div>
         <div class="footer-content">
-          <h2 class="footer-title">Assistance</h2>
-          <p>Centre d'aide</p>
-          <p>Nous contacter</p>
+          <h3>Assistance</h3>
+          <a href="#">Centre d'aide</a>
+          <a href="#">Nous contacter</a>
         </div>
       </footer>
     </div>
