mise en place 1er étapes

--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
                 
                 <input type="text" name="destination" id="destination" placeholder="Marseille, France" size="20" maxlength="20">
                 
-                <!-- <input type="submit" value="Rechercher"> -->
                 <button class="bouton-rechercher" type="submit">Rechercher</button><button class="logo-loupe" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
                 </p>
             </form>
@@ -86,22 +85,18 @@
                   />
                 </div>
                 <div class="cartes-hebergement-content2">
-                  <div class="nom-hotel">
+                  <!-- <div class="nom-hotel"> -->
                     <h3>Hôtel du port</h3>
-                  </div>
-                  <div class="prix">
+                  <!-- </div> -->
+                  <!-- <div class="prix"> -->
                     <p>Nuit à partir de 52€</p>
-                  </div>
+                  <!-- </div> -->
                   <div class="card-rating">
                     <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                     <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                     <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                     <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                    <i
-                      class="fa-xs fa-solid fa-star neutral-star"
-                      aria-hidden="true"
-                    >
-                    </i>
+                    <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
                   </div>
                 </div>
             </article>
