fin partie hébergements et populaires

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               <h2 class="section-title" id="lien-hebergement">Hèbergements à Marseille</h2>
             </div>
             <div class="column-hebergement">
-              <article class="cartes-hebergement">
+              <a class="cartes-hebergement" href="#">
                 <div class="cartes-hebergement-content1">
                   <img
                     src="./images/hebergements/fred-kleber.jpg"
@@ -89,7 +89,7 @@
                     <h3>Hôtel du port</h3>
                   <!-- </div> -->
                   <!-- <div class="prix"> -->
-                    <p>Nuit à partir de 52€</p>
+                    <p>Nuit à partir de 52<span class="euro">€</span></p>
                   <!-- </div> -->
                   <div class="card-rating">
                     <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
@@ -99,8 +99,8 @@
                     <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
                   </div>
                 </div>
-            </article>
-              <article class="cartes-hebergement">               
+            </a>
+              <a class="cartes-hebergement" href="#">               
                 <div class="cartes-hebergement-content1">
                   <img
                     src="./images/hebergements/febrian-zakaria.jpg"
@@ -108,12 +108,12 @@
                   />
                 </div>
                 <div class="cartes-hebergement-content2">
-                  <div class="nom-hotel">
+                  <!-- <div class="nom-hotel"> -->
                     <h3>Hôtel Chez Amina</h3>
-                  </div>
-                  <div class="prix">
-                    <p>Nuit à partir de 96€</p>
-                  </div>
+                  <!-- </div> -->
+                  <!-- <div class="prix"> -->
+                    <p>Nuit à partir de 96<span class="euro">€</span></p>
+                  <!-- </div> -->
                   <div class="card-rating">
                     <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                     <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
@@ -126,8 +126,8 @@
                     </i>
                   </div>
                 </div>
-            </article>
-              <article class="cartes-hebergement">
+            </a>
+              <a class="cartes-hebergement" href="#">
                 <div class="cartes-hebergement-content1">
                   <img
                     src="./images/hebergements/reisetopia.jpg"
@@ -135,12 +135,12 @@
                   />
                 </div>
                 <div class="cartes-hebergement-content2">
-                  <div class="nom-hotel">
+                  <!-- <div class="nom-hotel"> -->
                     <h3>Hôtel Les Mouettes</h3>
-                  </div>
-                  <div class="prix">
-                    <p>Nuit à partir de 76€</p>
-                  </div>
+                  <!-- </div> -->
+                  <!-- <div class="prix"> -->
+                    <p>Nuit à partir de 76<span class="euro">€</span></p>
+                  <!-- </div> -->
                   <div class="card-rating">
                     <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                     <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
@@ -153,10 +153,10 @@
                     </i>
                   </div>
                 </div>
-            </article>
+            </a>
             </div>
             <div class="column-hebergement">
-              <article class="cartes-hebergement">
+              <a class="cartes-hebergement" href="#">
                 <div class="cartes-hebergement-content1">
                   <img
                     src="./images/hebergements/annie-spratt.jpg"
@@ -164,12 +164,12 @@
                   />
                 </div>
                 <div class="cartes-hebergement-content2">
-                  <div class="nom-hotel">
+                  <!-- <div class="nom-hotel"> -->
                     <h3>Hôtel de la Mer</h3>
-                  </div>
-                  <div class="prix">
-                    <p>Nuit à partir de 46€</p>
-                  </div>
+                  <!-- </div>
+                  <div class="prix"> -->
+                    <p>Nuit à partir de 46<span class="euro">€</span></p>
+                  <!-- </div> -->
                   <div class="card-rating">
                     <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                     <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
@@ -182,8 +182,8 @@
                     </i>
                   </div>
                 </div>
-            </article>
-              <article class="cartes-hebergement">
+            </a>
+              <a class="cartes-hebergement" href="#">
                 <div class="cartes-hebergement-content1">
                   <img
                     src="./images/hebergements/marcus-loke.jpg"
@@ -191,12 +191,12 @@
                   />
                 </div>
                 <div class="cartes-hebergement-content2">
-                  <div class="nom-hotel">
+                  <!-- <div class="nom-hotel"> -->
                     <h3>Auberge La Canebière</h3>
-                  </div>
-                  <div class="prix">
-                    <p>Nuit à partir de 25€</p>
-                  </div>
+                  <!-- </div>
+                  <div class="prix"> -->
+                    <p>Nuit à partir de 25<span class="euro">€</span></p>
+                  <!-- </div> -->
                   <div class="card-rating">
                     <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                     <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
@@ -209,8 +209,8 @@
                     </i>
                   </div>
                 </div>
-            </article>
-              <article class="cartes-hebergement">   
+            </a>
+              <a class="cartes-hebergement" href="#">   
                 <div class="cartes-hebergement-content1">
                   <img
                     src="./images/hebergements/nicate-lee.jpg"
@@ -218,12 +218,12 @@
                   />
                 </div>
                 <div class="cartes-hebergement-content2">
-                  <div class="nom-hotel">
+                  <!-- <div class="nom-hotel"> -->
                     <h3>Auberge Le Panier</h3>
-                  </div>
-                  <div class="prix">
-                    <p>Nuit à partir de 23€</p>
-                  </div>
+                  <!-- </div>
+                  <div class="prix"> -->
+                    <p>Nuit à partir de 23<span class="euro">€</span></p>
+                  <!-- </div> -->
                   <div class="card-rating">
                     <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                     <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
@@ -236,8 +236,9 @@
                     </i>
                   </div>
                 </div>
-            </article>          
+            </a>          
             </div>
+            <button class="afficher-plus" type="button"><a href="#">Afficher plus</a></button>
           </section>
 <!--Encadré zone Populaires-->
           <section class="populaires">
@@ -246,7 +247,7 @@
               <i class="fa-solid fa-chart-line" aria-hidden="true"></i>
             </div>
             <div class="populaires-cards">
-              <article class="card">
+              <a class="card" href="#">
                 <img
                   src="./images/hebergements/emile-guillemot.jpg"
                   alt="Image de la chambre d'hôtel montrant un lit"
@@ -270,8 +271,8 @@
                     <span class="sr-only">Note de 4 sur 5</span>
                   </div>
                 </div>
-              </article>
-              <article class="card">
+              </a>
+              <a class="card" href="#">
                 <img
                   src="./images/hebergements/aw-creative.jpg"
                   alt="Image de la chambre d'hôtel montrant un lit"
@@ -297,8 +298,8 @@
                     <span class="sr-only">Note de 4 sur 5</span>
                   </div>
                 </div>
-              </article>
-              <article class="card">
+              </a>
+              <a class="card" href="#">
                 <img
                   src="./images/hebergements/febrian-zakaria2.jpg"
                   alt="Image de la chambre d'hôtel montrant un lit"
@@ -322,7 +323,7 @@
                     <span class="sr-only">Note de 4 sur 5</span>
                   </div>
                 </div>
-              </article>
+              </a>
             </div>
           </section>
         </div>
