fin mise en place partie activités

--- a/index.html
+++ b/index.html
@@ -333,50 +333,34 @@
             <h2 class="section-title" id="lien-activite">Activités à Marseille</h2>
           </div>
           <div class="activite">
-            <div class="cartes-activite">
-              <div class="cartes-activite-content1">
+            <a class="cartes-activite" href="#">
                 <img
                   src="./images/activites/reno-laithienne.jpg"
                   alt="Photo du vieux port de marseille"
                 />
-              </div>
-              <div class="cartes-activite-content2">
                 <h3>Vieux-Port</h3>
-              </div>
-            </div>
-            <div class="cartes-activite">
-              <div class="cartes-activite-content1">
+              </a>
+            <a class="cartes-activite" href="#">
                 <img
                   src="./images/activites/paul-hermann.jpg"
                   alt="Photo du fort de Pomègues"
                 />
-              </div>
-              <div class="cartes-activite-content2">
                 <h3>Fort de Pomègues</h3>
-              </div>
-            </div>
-            <div class="cartes-activite">
-              <div class="cartes-activite-content1">
+            </a>
+            <a class="cartes-activite" href="">
                 <img
                   src="./images/activites/kilyan-sockalingum.jpg"
                   alt="Photo du Parc national des calanques"
                 />
-              </div>
-              <div class="cartes-activite-content2">
                 <h3>Parc national des calanques</h3>
-              </div>
-            </div>
-            <div class="cartes-activite">
-              <div class="cartes-activite-content1">
+            </a>
+            <a class="cartes-activite" href="#">
                 <img
                   src="./images/activites/florian-wehde.jpg"
                   alt="Photo de Notre-Dame-de-la-Garde"
                 />
-              </div>
-              <div class="cartes-activite-content2">
                 <h3>Notre-Dame-de-la-Garde</h3>
-              </div>
-            </div>
+            </a>
           </div>
         </section>
       </main>
