--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Booki</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" >
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap"
       rel="stylesheet"
-    />
+    >
     <!-- <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
@@ -19,14 +19,14 @@
     /> -->
     <script src="https://kit.fontawesome.com/f8163ca424.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" >
   </head>
 
   <body>
     <div class="main-container">
 <!--Header-->
       <header>
-        <img src="./images/logo/Booki.png" alt="Logo du site Booki" id="logo" />
+        <img src="./images/logo/Booki.png" alt="Logo du site Booki" id="logo" >
         <nav>
           <a href="#lien-hebergement">Hébergements</a>
           <a href="#lien-activite">Activités</a>
@@ -41,11 +41,9 @@
           </div>
           <div class="zone-de-recherche">
             <form method="get" action="">
-                <p>
                 <label for="destination"><i class="fa-solid fa-location-dot"></i></label>
                 <input type="text" name="destination" id="destination" placeholder="Marseille, France" size="20" maxlength="20">
                 <button class="bouton-rechercher" type="submit">Rechercher</button><button class="logo-loupe" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
-                </p>
             </form>
           </div>
           <div class="zone-filtres">
@@ -78,7 +76,7 @@
                   <img
                     src="./images/hebergements/fred-kleber.jpg"
                     alt="photo d'une chambre de l'hôtel du port"
-                  />
+                  >
                 <div class="cartes-hebergement-content">
                     <h3>Hôtel du port</h3>
                     <p>Nuit à partir de 52<span class="euro">€</span></p>
@@ -95,7 +93,7 @@
                   <img
                     src="./images/hebergements/febrian-zakaria.jpg"
                     alt="photo d'une chambre de l'hôtel Chez Amina"
-                  />
+                  >
                 <div class="cartes-hebergement-content">
                     <h3>Hôtel Chez Amina</h3>
                     <p>Nuit à partir de 96<span class="euro">€</span></p>
@@ -116,7 +114,7 @@
                   <img
                     src="./images/hebergements/reisetopia.jpg"
                     alt="photo d'une chambre de l'hôtel Les Mouettes"
-                  />
+                  >
                 <div class="cartes-hebergement-content">
                     <h3>Hôtel Les Mouettes</h3>
                     <p>Nuit à partir de 76<span class="euro">€</span></p>
@@ -139,7 +137,7 @@
                   <img
                     src="./images/hebergements/annie-spratt.jpg"
                     alt="photo d'une chambre de l'hôtel de la Mer"
-                  />
+                  >
                 <div class="cartes-hebergement-content">
                     <h3>Hôtel de la Mer</h3>
                     <p>Nuit à partir de 46<span class="euro">€</span></p>
@@ -160,7 +158,7 @@
                   <img
                     src="./images/hebergements/marcus-loke.jpg"
                     alt="photo d'une chambre de l'Auberge La Canebière"
-                  />
+                  >
                 <div class="cartes-hebergement-content">
                     <h3>Auberge La Canebière</h3>
                     <p>Nuit à partir de 25<span class="euro">€</span></p>
@@ -181,7 +179,7 @@
                   <img
                     src="./images/hebergements/nicate-lee.jpg"
                     alt="photo d'une chambre de l'Auberge Le Panier"
-                  />
+                  >
                 <div class="cartes-hebergement-content">
                     <h3>Auberge Le Panier</h3>
                     <p>Nuit à partir de 23<span class="euro">€</span></p>
@@ -199,7 +197,9 @@
                 </div>
             </a>          
             </div>
-            <button class="afficher-plus" type="button"><a href="#">Afficher plus</a></button>
+            <form class="zone-afficher-plus" action="#" method="get"><button class="afficher-plus">Afficher-plus</button></form>
+
+            <!-- <button class="afficher-plus" type="button"><a href="#">Afficher plus</a></button> -->
           </section>
 <!--Encadré zone Populaires-->
           <section class="populaires">
@@ -212,8 +212,8 @@
                 <img
                   src="./images/hebergements/emile-guillemot.jpg"
                   alt="Image de la chambre d'hôtel montrant un lit"
-                />
-                <div class="card-content">
+                >
+                <div class="populaire-card-content">
                   <div class="card-txt">
                     <h3 class="card-title">Hôtel Le soleil du matin</h3>
                     <p class="card-subtitle">
@@ -237,8 +237,8 @@
                 <img
                   src="./images/hebergements/aw-creative.jpg"
                   alt="Image de la chambre d'hôtel montrant un lit"
-                />
-                <div class="card-content">
+                >
+                <div class="populaire-card-content">
                   <div class="card-txt">
                     <h3 class="card-title">
                       Chambres d’hôtes Au cœur de l’eau
@@ -264,8 +264,8 @@
                 <img
                   src="./images/hebergements/febrian-zakaria2.jpg"
                   alt="Image de la chambre d'hôtel montrant un lit"
-                />
-                <div class="card-content">
+                >
+                <div class="populaire-card-content">
                   <div class="card-txt">
                     <h3 class="card-title">Hôtel Bleu et Blanc</h3>
                     <p class="card-subtitle">
@@ -290,37 +290,39 @@
         </div>
 <!--Encadré zone Activité-->
         <section class="onglet-activite">
-          <div class="activite-title">
-            <h2 class="section-title" id="lien-activite">Activités à Marseille</h2>
-          </div>
+            <h2 class="activite-title" id="lien-activite">Activités à Marseille</h2>
           <div class="activite">
             <a class="cartes-activite" href="#">
                 <img
                   src="./images/activites/reno-laithienne.jpg"
                   alt="Photo du vieux port de marseille"
-                />
-                <h3>Vieux-Port</h3>
+                >
+                <div class="nom-activite">
+                <h3>Vieux-Port</h3></div>
               </a>
             <a class="cartes-activite" href="#">
                 <img
                   src="./images/activites/paul-hermann.jpg"
                   alt="Photo du fort de Pomègues"
-                />
-                <h3>Fort de Pomègues</h3>
+                >
+                <div class="nom-activite">
+                <h3>Fort de Pomègues</h3></div>
             </a>
             <a class="cartes-activite" href="">
                 <img
                   src="./images/activites/kilyan-sockalingum.jpg"
                   alt="Photo du Parc national des calanques"
-                />
-                <h3>Parc national des calanques</h3>
+                >
+                <div class="nom-activite">
+                <h3>Parc national des calanques</h3></div>
             </a>
             <a class="cartes-activite" href="#">
                 <img
                   src="./images/activites/florian-wehde.jpg"
                   alt="Photo de Notre-Dame-de-la-Garde"
-                />
-                <h3>Notre-Dame-de-la-Garde</h3>
+                >
+                <div class="nom-activite">
+                <h3>Notre-Dame-de-la-Garde</h3></div>
             </a>
           </div>
         </section>
