responsive partie mobile

--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
             <form method="get" action="">
                 <label for="destination"><i class="fa-solid fa-location-dot"></i></label>
                 <input type="text" name="destination" id="destination" placeholder="Marseille, France" size="20" maxlength="20">
-                <button class="bouton-rechercher" type="submit">Rechercher</button><button class="logo-loupe" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+                <button class="bouton-rechercher" type="submit">Rechercher</button>
+                <div class="bouton-loupe">
+                    <button class="logo-loupe" type="submit"><i class="fa-solid fa-magnifying-glass fa-lg"></i></button>
+                </div>
             </form>
           </div>
           <div class="zone-filtres">
@@ -197,7 +200,9 @@
                 </div>
             </a>          
             </div>
-            <form class="zone-afficher-plus" action="#" method="get"><button class="afficher-plus">Afficher-plus</button></form>
+            <form class="zone-afficher-plus" action="#" method="get">
+                <button class="afficher-plus" type="submit">Afficher-plus</button>
+            </form>
 
             <!-- <button class="afficher-plus" type="button"><a href="#">Afficher plus</a></button> -->
           </section>
