essai de mise en page avec flex-wrap

--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
                   </div>
                 </div>
             </a>
-            </div>
-            <div class="column-hebergement">
+            <!-- </div> -->
+            <!-- <div class="column-hebergement"> -->
               <a class="cartes-hebergement" href="#">
                   <img
                     src="./images/hebergements/annie-spratt.jpg"
