coorection erreur form w3c

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <p>En plein centre-ville ou en pleine nature</p>
           </div>
           <div class="zone-de-recherche">
-            <form method="get" action="">
+            <form method="get" action="#">
                 <label for="destination"><i class="fa-solid fa-location-dot"></i></label>
                 <input type="text" name="destination" id="destination" placeholder="Marseille, France" size="20" maxlength="20">
                 <button class="bouton-rechercher" type="submit">Rechercher</button>
